--- a/UnitFrameServico.fmx
+++ b/UnitFrameServico.fmx
@@ -1,10 +1,12 @@
 object FrameServico: TFrameServico
+  HitTest = False
   Size.Width = 377.000000000000000000
   Size.Height = 54.000000000000000000
   Size.PlatformDefault = False
   object rectAgendar: TRectangle
     Align = Right
     Fill.Color = xFF5CC6BA
+    HitTest = False
     Margins.Top = 8.000000000000000000
     Margins.Right = 10.000000000000000000
     Margins.Bottom = 8.000000000000000000
